# ML-Weekly-Projects

./: CNAME  README.md  about.html  generate_google_favicons.py  index.html  readme.md  requirements.txt  robots.txt  script.js  sitemap.xml  styles.css  terms.html
.github/workflows/: backend.yml  frontend.yml
AI detector/: .gitignore  Dockerfile  pyproject.toml
AI detector/app/: main.py
AI detector/app/core/: __init__.py  config.py
AI detector/app/schemas/: analyze.py
AI detector/app/services/: burstiness.py  perplexity.py  repetition.py  scoring.py
AI detector/frontend/: index.html  script.js
AI detector/scripts/: benchmark_examples.py  sanity_check.py
AI detector/tests/: test_perplexity.py
AI-detector/: .gitignore  Dockerfile  TECHNICAL_DETAILS.md  docker-compose.yml  fly.toml  requirements.txt  restart_server.bat
AI-detector/app/: main.py
AI-detector/frontend/: about.html  how-ai-detection-works.html  index.html  privacy.html  script.js  styles.css  terms.html
AI-detector/tests/: test_scoring.py
Convolutional Neural Network/: README.md  requirements.txt
Convolutional Neural Network/notebooks/: CIFAR10_image_classification.ipynb
Linear_Regression/: .gitignore  app.py  readme.md
Linear_Regression/Notebooks/: linear_regression.ipynb
Logistic_Regression/: requirements.txt
Logistic_Regression/Notebooks/: titanic_logistic_regression.ipynb
Neural_Networks/: Deep_Learning_Mnist.ipynb  readme.md
RAG_UN_SDG/: README.md  requirements.txt
app/: main.py
app/core/: logging.py
frontend/: script.js  styles.css
tests/: test_burstiness.py
(+21 files in other folders)
